remove log + add code

--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -36,12 +36,9 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src='https://www.googletagmanager.com/gtag/js?id=G-XDNWTTDQ1W'></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-XDNWTTDQ1W');
+  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W');
 </script>
+<script data-ad-client="ca-pub-5101718850050799" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div id='app-loader'>
