vi trans + style change + ad code

--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -39,6 +39,10 @@
   window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W');
 </script>
 <script data-ad-client="ca-pub-5101718850050799" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  console.log('%cLUYENCODE.NET', 'font-weight: bold; font-size: 50px;color:red;');
+  console.log('%cChúc các bạn có những giây phút học lập trình thăng hoa!', 'font-weight: bold; font-size: 20px;');
+</script>
 </head>
 <body>
 <div id='app-loader'>
