add logo, banner

--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -39,10 +39,6 @@
   window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W');
 </script>
 <script data-ad-client="ca-pub-5101718850050799" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  console.log('%cLUYENCODE.NET', 'font-weight: bold; font-size: 50px;color:red;');
-  console.log('%cChúc các bạn có những giây phút học lập trình thăng hoa!', 'font-weight: bold; font-size: 20px;');
-</script>
 </head>
 <body>
 <div id='app-loader'>
@@ -60,6 +56,10 @@
 <!-- built files will be auto injected -->
 <script src='/static/plugin/live2d/jquery.min.js?v=3.3.1'></script>
 <script src='/static/plugin/live2d/jquery-ui.min.js?v=1.12.1'></script>
-<!-- <script src='/static/plugin/live2d/autoload.js?v=1.4.2'></script> -->
+<script>
+  for(let ele of document.getElementsByClassName("adsbygoogle")){
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  }
+</script>
 </body>
 </html>
