--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -53,13 +53,28 @@
   <div class='square last'></div>
 </div>
 <div id='app'></div>
+<script>
+  function insertAd(ele, code){
+    e = document.getElementById(ele);
+    if (e != null){
+      e.innerHTML = code;
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    }
+  }
+  let countCheck = 0;
+  var checkAdsReady = setInterval(function() {
+   countCheck += 1;
+   if(countCheck > 10) clearInterval(checkAdsReady);  
+   if (document.getElementById('ggslot1') != null) {
+    insertAd('ggslot1', '<ins class="adsbygoogle" style="display:block; max-width: 300px;min-width: 200px;min-height: 300px;" data-ad-client="ca-pub-5101718850050799" data-ad-slot="6898080101" data-ad-format="auto" data-full-width-responsive="true"></ins>');
+    // insertAd('ggslot2', '<ins class="adsbygoogle" style="display:block; max-width: 300px;min-width: 200px;min-height: 300px;" data-ad-client="ca-pub-5101718850050799" data-ad-slot="1422392145" data-ad-format="auto" data-full-width-responsive="true"></ins>');    
+    clearInterval(checkAdsReady);
+   }
+}, 200); // check every 100ms
+  
+</script>
 <!-- built files will be auto injected -->
 <script src='/static/plugin/live2d/jquery.min.js?v=3.3.1'></script>
 <script src='/static/plugin/live2d/jquery-ui.min.js?v=1.12.1'></script>
-<script>
-  for(let ele of document.getElementsByClassName("adsbygoogle")){
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  }
-</script>
 </body>
 </html>
