--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -64,7 +64,7 @@
   let countCheck = 0;
   var checkAdsReady = setInterval(function() {
    countCheck += 1;
-   if(countCheck > 30 || /problem\/.+$/.test(window.location.href) == false) clearInterval(checkAdsReady);  
+   if(countCheck > 30) clearInterval(checkAdsReady);  
    if (document.getElementById('ggslot1') != null) {
     insertAd('ggslot1', '<ins class="adsbygoogle" style="display:block;" data-ad-client="ca-pub-5101718850050799" data-ad-slot="6898080101" data-ad-format="auto" data-full-width-responsive="true"></ins>');
     clearInterval(checkAdsReady);
