--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Luyện Code Online | Học lập trình tương tác trực tuyến</title>
+  <title>Luyện Code Online - Học lập trình tương tác trực tuyến</title>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'/>
   <meta name='renderer' content='webkit'/>
   <meta property='og:locale' content='vi_VN'>
 <meta property='og:type' content='website'>
-<meta property='og:title' content='Luyện Code Online | Học lập trình tương tác trực tuyến'>
+<meta property='og:title' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
 <meta property='og:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
 <meta property='og:url' content='https://luyencode.net/'>
 <meta property='og:site_name' content='Luyện Code Online | Học lập trình tương tác trực tuyến'>
@@ -17,10 +17,10 @@
 <meta property='og:image:secure_url' content='https://luyencode.net/static/img/luyen-code.jpg'>
 <meta property='og:image:width' content='500'>
 <meta property='og:image:height' content='500'>
-<meta property='og:image:alt' content='Luyện Code Online | Học lập trình tương tác trực tuyến'>
+<meta property='og:image:alt' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
 <meta property='og:image:type' content='image/jpeg'>
 <meta name='twitter:card' content='summary_large_image'>
-<meta name='twitter:title' content='Luyện Code Online | Học lập trình tương tác trực tuyến'>
+<meta name='twitter:title' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
 <meta name='twitter:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
 <meta name='twitter:site' content='@nguyenvanhieuvn'>
 <meta name='twitter:creator' content='@nguyenvanhieuvn'>
