--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -8,19 +8,19 @@
   <meta name='renderer' content='webkit'/>
   <meta property='og:locale' content='vi_VN'>
 <meta property='og:type' content='website'>
-<meta property='og:title' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
+<meta property='og:title' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
 <meta property='og:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
 <meta property='og:url' content='https://luyencode.net/'>
-<meta property='og:site_name' content='Luyện Code Online | Học lập trình tương tác trực tuyến'>
+<meta property='og:site_name' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
 <meta property='fb:app_id' content='1352107988256879'>
 <meta property='og:image' content='https://luyencode.net/static/img/luyen-code.jpg'>
 <meta property='og:image:secure_url' content='https://luyencode.net/static/img/luyen-code.jpg'>
 <meta property='og:image:width' content='500'>
 <meta property='og:image:height' content='500'>
-<meta property='og:image:alt' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
+<meta property='og:image:alt' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
 <meta property='og:image:type' content='image/jpeg'>
 <meta name='twitter:card' content='summary_large_image'>
-<meta name='twitter:title' content='Học lập trình tương tác trực tuyến - Luyện Code Online'>
+<meta name='twitter:title' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
 <meta name='twitter:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
 <meta name='twitter:site' content='@nguyenvanhieuvn'>
 <meta name='twitter:creator' content='@nguyenvanhieuvn'>
@@ -54,32 +54,58 @@
 </div>
 <div id='app'></div>
 <script>
-  function insertAd(ele, code){
-    e = document.getElementById(ele);
-    if (e != null){
+function insertAdEle(ele, code) {
+  e = document.getElementById(ele);
+  if (e != null) {
       e.innerHTML = code;
       (adsbygoogle = window.adsbygoogle || []).push({});
-    }
+      // console.log('Pushed ads', ele);
   }
+}
+function insertAds(){
   let countCheck = 0;
   var checkAdsReady = setInterval(function() {
-   countCheck += 1;
-   if(countCheck > 30) clearInterval(checkAdsReady);  
-   if (document.getElementById('ggslot1') != null) {
-    insertAd('ggslot1', '<ins class="adsbygoogle" style="display:block;" data-ad-client="ca-pub-5101718850050799" data-ad-slot="6898080101" data-ad-format="auto" data-full-width-responsive="true"></ins>');
-    clearInterval(checkAdsReady);
-    window.onscroll = function() {stickyBanner()};
-    var header = document.getElementById("ggslot1");
-    var sticky = header.offsetTop;
-    function stickyBanner() {
-    if (window.pageYOffset > sticky) {
-      header.classList.add("sticky");
-    } else {
-      header.classList.remove("sticky");
+    countCheck += 1;
+    if (countCheck > 30) clearInterval(checkAdsReady);
+    if (document.getElementsByClassName('ggslot') != null) {
+      insertAdEle('ggslot1', '<ins class="adsbygoogle" style="display:block;" data-ad-client="ca-pub-5101718850050799" data-ad-slot="6898080101" data-ad-format="auto" data-full-width-responsive="true"></ins>');
+      insertAdEle('ggslot2', '<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-5101718850050799" data-ad-slot="1422392145"></ins>');
+      insertAdEle('ggslot3', '<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5101718850050799" data-ad-slot="9015055098" data-ad-format="auto" data-full-width-responsive="true"></ins>');
+      insertAdEle('ggslot4', '<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-5101718850050799" data-ad-slot="5845966271"></ins>');
+      insertAdEle('ggslot5', '<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-5101718850050799" data-ad-slot="6962579151" ></ins>');
+      insertAdEle('ggslot6', '<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-5101718850050799" data-ad-slot="4176633712"></ins>');
+      clearInterval(checkAdsReady);
+      var header = document.getElementById("ggslot1");
+      var sticky = header == null ? -1 : header.offsetTop;
+      window.onscroll = function() {
+        if (sticky == -1) return;
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+        } else {
+          header.classList.remove("sticky");
+        }
+      };
     }
-}
-   }
-}, 300); // check every 100ms
+  }, 300); // check every 100ms
+}  
+var oldHref = document.location.href;
+window.onload = function() {
+  insertAds();
+  var bodyList = document.querySelector("body");
+  observer = new MutationObserver(function(mutations) {
+    mutations.forEach(function(mutation) {
+      if (oldHref != document.location.href) {
+        oldHref = document.location.href;
+        insertAds();
+      }
+    });
+  });
+  var config = {
+    childList: true,
+    subtree: true
+  };
+  observer.observe(bodyList, config);
+};
 </script>
 <!-- built files will be auto injected -->
 <script src='/static/plugin/live2d/jquery.min.js?v=3.3.1'></script>
