update + remove GA code

--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -34,9 +34,9 @@
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src='https://www.googletagmanager.com/gtag/js?id=G-XDNWTTDQ1W'></script>
+<!-- <script async src='https://www.googletagmanager.com/gtag/js?id=G-XDNWTTDQ1W'></script>
 <script>
-  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W');
+  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W'); -->
 </script>
 </head>
 <body>
