--- a/src/pages/oj/index.html
+++ b/src/pages/oj/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Luyện Code Online - Học lập trình tương tác trực tuyến</title>
+  <title>Thực hành Code - ĐH Mở Hà Nội - Học lập trình tương tác trực tuyến</title>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'/>
-  <meta name='renderer' content='webkit'/>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' />
+  <meta name='renderer' content='webkit' />
   <meta property='og:locale' content='vi_VN'>
-<meta property='og:type' content='website'>
-<meta property='og:title' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
-<meta property='og:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
-<meta property='og:url' content='https://luyencode.net/'>
-<meta property='og:site_name' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
-<meta property='fb:app_id' content='1352107988256879'>
-<meta property='og:image' content='https://luyencode.net/static/img/luyen-code.jpg'>
-<meta property='og:image:secure_url' content='https://luyencode.net/static/img/luyen-code.jpg'>
-<meta property='og:image:width' content='500'>
-<meta property='og:image:height' content='500'>
-<meta property='og:image:alt' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
-<meta property='og:image:type' content='image/jpeg'>
-<meta name='twitter:card' content='summary_large_image'>
-<meta name='twitter:title' content='Luyện Code Online - Học lập trình tương tác trực tuyến'>
-<meta name='twitter:description' content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
-<meta name='twitter:site' content='@nguyenvanhieuvn'>
-<meta name='twitter:creator' content='@nguyenvanhieuvn'>
+  <meta property='og:type' content='website'>
+  <meta property='og:title' content='Thực hành Code - ĐH Mở Hà Nội - Học lập trình tương tác trực tuyến'>
+  <meta property='og:description'
+    content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
+  <meta property='og:url' content='https://luyencode.net/'>
+  <meta property='og:site_name' content='Thực hành Code - ĐH Mở Hà Nội - Học lập trình tương tác trực tuyến'>
+  <meta property='fb:app_id' content='1352107988256879'>
+  <meta property='og:image' content='https://luyencode.net/static/img/luyen-code.jpg'>
+  <meta property='og:image:secure_url' content='https://luyencode.net/static/img/luyen-code.jpg'>
+  <meta property='og:image:width' content='500'>
+  <meta property='og:image:height' content='500'>
+  <meta property='og:image:alt' content='Thực hành Code - ĐH Mở Hà Nội - Học lập trình tương tác trực tuyến'>
+  <meta property='og:image:type' content='image/jpeg'>
+  <meta name='twitter:card' content='summary_large_image'>
+  <meta name='twitter:title' content='Thực hành Code - ĐH Mở Hà Nội - Học lập trình tương tác trực tuyến'>
+  <meta name='twitter:description'
+    content='Luyện code & Học lập trình tương tác trực tuyến cực kỳ hấp dẫn qua việc chấm code tự động'>
+  <meta name='twitter:site' content='@nguyenvanhieuvn'>
+  <meta name='twitter:creator' content='@nguyenvanhieuvn'>
   <link rel='shortcut icon' href='/static/img/favicon.png'>
   <link href='/static/css/loader.css' rel='stylesheet'>
   <script>
@@ -34,26 +37,28 @@
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src='https://www.googletagmanager.com/gtag/js?id=G-XDNWTTDQ1W'></script>
+  <!-- <script async src='https://www.googletagmanager.com/gtag/js?id=G-XDNWTTDQ1W'></script>
 <script>
   window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XDNWTTDQ1W'); -->
-</script>
+  </script>
 </head>
+
 <body>
-<div id='app-loader'>
-  <div class='square'></div>
-  <div class='square'></div>
-  <div class='square last'></div>
-  <div class='square clear'></div>
-  <div class='square'></div>
-  <div class='square last'></div>
-  <div class='square clear'></div>
-  <div class='square '></div>
-  <div class='square last'></div>
-</div>
-<div id='app'></div>
-<!-- built files will be auto injected -->
-<script src='/static/plugin/live2d/jquery.min.js?v=3.3.1'></script>
-<script src='/static/plugin/live2d/jquery-ui.min.js?v=1.12.1'></script>
+  <div id='app-loader'>
+    <div class='square'></div>
+    <div class='square'></div>
+    <div class='square last'></div>
+    <div class='square clear'></div>
+    <div class='square'></div>
+    <div class='square last'></div>
+    <div class='square clear'></div>
+    <div class='square '></div>
+    <div class='square last'></div>
+  </div>
+  <div id='app'></div>
+  <!-- built files will be auto injected -->
+  <script src='/static/plugin/live2d/jquery.min.js?v=3.3.1'></script>
+  <script src='/static/plugin/live2d/jquery-ui.min.js?v=1.12.1'></script>
 </body>
+
 </html>
